Crawler: Added config loader

--- a/config/scheduler_config.yml
+++ b/config/scheduler_config.yml
@@ -1,29 +1,32 @@
-default:
-  logging:
-    log_to_file: true
-    log_level: INFO
+logging:
+  log_to_file: true
+  log_level: INFO
 
-  deduplication:
-    redis_cache_ttl: 43200 #12 Hrs
+deduplication:
+  redis_cache_ttl: 43200 #12 Hrs
 
-  filters:
-    max_depth: 4
+wikipedia:
+  base_url: https://en.wikipedia.org
+  robots_txt: https://en.wikipedia.org/robots.txt
 
-    allow_domains:
-      - en.wikipedia.org
+filters:
+  max_depth: 4
 
-    excluded_prefixes:
-      - "/wiki/Special:"
-      - "/wiki/Help:"
-      - "/wiki/Portal:"
-      - "/wiki/File:"
-      - "/wiki/Template:"
-      - "/wiki/Template_talk:"
-      - "/wiki/Wikipedia:"
-      - "/wiki/Talk:"
-      - "/wiki/Category:"
-      - "/wiki/Book:"
-      - "/wiki/User:"
-      - "/wiki/Module:"
-      - "/wiki/Project:"
-      - "/wiki/Main_Page"
+  allow_domains:
+    - en.wikipedia.org
+
+  excluded_prefixes:
+    - "/wiki/Special:"
+    - "/wiki/Help:"
+    - "/wiki/Portal:"
+    - "/wiki/File:"
+    - "/wiki/Template:"
+    - "/wiki/Template_talk:"
+    - "/wiki/Wikipedia:"
+    - "/wiki/Talk:"
+    - "/wiki/Category:"
+    - "/wiki/Book:"
+    - "/wiki/User:"
+    - "/wiki/Module:"
+    - "/wiki/Project:"
+    - "/wiki/Main_Page"
