--- a/shared/configs/global_config.yml
+++ b/shared/configs/global_config.yml
@@ -1,21 +1,20 @@
-default:
-  redis:
-    host: redis
-    port: 6379
-    db_seen: 0
-    decode_responses: true
+redis:
+  host: redis
+  port: 6379
+  db_seen: 0
+  decode_responses: true
 
-  postgres:
-    host: postgres
-    port: 5432
-    db: ${POSTGRES_DB}
-    user: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
-    url: ${DATABASE_URL}
+postgres:
+  host: postgres
+  port: 5432
 
-  rabbitmq:
-    user: ${RABBITMQ_USER}
-    password: ${RABBITMQ_PASSWORD}
-    host: rabbitmq
-    port: 5672
-  
+rabbitmq:
+  host: rabbitmq
+  port: 5672
+
+# http headers
+headers:
+  accept: text/html
+  accept-language: en-US
+  user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36
+
