BugFix: Patched broken testcases and github workflow

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ testpaths =
 python_files = test_*.py
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests that require real containers or services
