--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,5 +100,5 @@ jobs:
         run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
 
       - name: Run test suite
-        run: pytest tests/
+        run: PYTHONPATH=${{ github.workspace }} pytest -m "not integration" tests/
         
