--- a/components/crawler/configs/crawler_config.yml
+++ b/components/crawler/configs/crawler_config.yml
@@ -15,9 +15,12 @@ heartbeat:
   key_pattern: "crawler:*:heartbeat"
   scan_count: 100
 
+recrawl_interval: 691200 # 8 days in seconds
+
 headers:
   accept: text/html
   accept-language: en-US
   user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36
 
+# ${DL_HTML_PATH} is an env variable that has to be set (config loader does this)
 storage_path: ${DL_HTML_PATH}
