--- a/components/dispatcher/configs/dispatcher_config.yml
+++ b/components/dispatcher/configs/dispatcher_config.yml
@@ -3,8 +3,10 @@ logging:
   log_level: INFO
   logger_name: Dispatcher
 
-heartbeat_key_pattern: "crawler:*:heartbeat"
-scan_count: 100
+dispatch_count: 24
+# TODO: remove heartbeat configs if its no longer needed
+# heartbeat_key_pattern: "crawler:*:heartbeat"
+# scan_count: 1000
 
 seed_urls:
   - https://en.wikipedia.org/wiki/Computer_science
