--- a/docker/monitoring/configs/prometheus/prometheus.yml
+++ b/docker/monitoring/configs/prometheus/prometheus.yml
@@ -2,13 +2,23 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
+  # Dev 
   - job_name: "node-exporter"
     static_configs:
-      - targets: ["192.168.86.15:9100"] # dev for now
+      - targets: ["192.168.86.15:9100"] # Dev
 
   - job_name: "cadvisor"
     static_configs:
-      - targets: ["192.168.86.15:8080"] # dev for now
+      - targets: ["192.168.86.15:8080"] # Dev
+  
+  # Prod
+  - job_name: "node-exporter"
+    static_configs:
+      - targets: ["192.168.86.16:9100"] # Prod
+
+  - job_name: "cadvisor"
+    static_configs:
+      - targets: ["192.168.86.16:8080"] # Prod
 
   - job_name: 'prometheus'
     static_configs:
