--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,7 +9,7 @@ x-crawler-common: &crawler-common
   env_file: .env
   command: [ "python", "-m", "components.crawler.main" ]
   volumes:
-    - compressed_html_data:${DL_HTML_PATH}
+    - compressed_html_data:/data/html
   environment:
     - NO_PROXY=localhost,127.0.0.1,rabbitmq,redis,postgres,192.168.0.0/16
 
